force-app/main/default/objects/summing_snapshot__c/summing_snapshot__c.object-meta.xml
<CustomObject>
    <label>summing snapshot</label>
    <nameField>
        <displayFormat>x-{0}</displayFormat>
        <label>name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>summing snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>