force-app/main/default/objects/summing_snapshot__c/fields/Client__c.field-meta.xml
<CustomField>
    <fullName>Client__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>summing snapshots</relationshipLabel>
    <relationshipName>summing_snapshots</relationshipName>
    <type>Lookup</type>
</CustomField>