force-app/main/default/objects/summing_snapshot__c/fields/Delivery_Count__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Count__c</fullName>
    <label>Delivery Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>