force-app/main/default/objects/summing_snapshot__c/fields/Meal_Count__c.field-meta.xml
<CustomField>
    <fullName>Meal_Count__c</fullName>
    <label>Meal Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>