force-app/main/default/objects/summing_snapshot__c/fields/Sugg_Donation__c.field-meta.xml
<CustomField>
    <fullName>Sugg_Donation__c</fullName>
    <label>Sugg Donation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>